kubernetes/cluster-1/system/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  labels:
    pod-security.kubernetes.io/enforce: privileged
