kubernetes/cluster-1/system/longhorn/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn
spec:
  parentRefs:
  - name: ${CLUSTER_NAME}
    namespace: default # TODO patch operator line 93 to detect default ns
  hostnames:
  - longhorn.${PRIVATE_DOMAIN}
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
